--- a/PackageSources/html_ui/Pages/VCockpit/Instruments/A32NX_SU95/EcamPages/crz-page/template.html
+++ b/PackageSources/html_ui/Pages/VCockpit/Instruments/A32NX_SU95/EcamPages/crz-page/template.html
@@ -9306,11 +9306,11 @@
 	const PressureComponent = () => {
 	  const [landingElevDialPosition] = useSimVar('L:XMLVAR_KNOB_OVHD_CABINPRESS_LDGELEV', 'Number', 100);
 	  const [landingRunwayElevation] = useSimVar('L:A32NX_PRESS_AUTO_LANDING_ELEVATION', 'feet', 1000);
-	  const [manMode] = useSimVar('L:A32NX_CAB_PRESS_MODE_MAN', 'Bool', 1000);
+	  const [autoMode] = useSimVar('L:A32NX_OVHD_PRESS_MODE_SEL_PB_IS_AUTO', 'Bool', 1000);
 	  const [ldgElevMode, setLdgElevMode] = react.useState('AUTO');
 	  const [ldgElevValue, setLdgElevValue] = react.useState('XX');
 	  const [cssLdgElevName, setCssLdgElevName] = react.useState('green');
-	  const [landingElev] = useSimVar('L:A32NX_LANDING_ELEVATION', 'feet', 100);
+	  const [landingElev] = useSimVar('L:A32NX_OVHD_PRESS_LDG_ELEV_KNOB', 'feet', 100);
 	  const [cabinAlt] = useSimVar('L:A32NX_PRESS_CABIN_ALTITUDE', 'feet', 500);
 	  const [cabinVs] = useSimVar('L:A32NX_PRESS_CABIN_VS', 'feet per minute', 500);
 	  const [deltaPsi] = useSimVar('L:A32NX_PRESS_CABIN_DELTA_PRESSURE', 'psi', 1000);
@@ -9333,7 +9333,7 @@
 	  return /*#__PURE__*/jsxRuntime.jsxs(jsxRuntime.Fragment, {
 	    children: [/*#__PURE__*/jsxRuntime.jsxs("g", {
 	      id: "LandingElevation",
-	      className: !manMode ? 'show' : 'hide',
+	      className: autoMode ? 'show' : 'hide',
 	      children: [/*#__PURE__*/jsxRuntime.jsx("text", {
 	        className: "Standard Center",
 	        x: "330",
@@ -9360,14 +9360,14 @@
 	      })]
 	    }), /*#__PURE__*/jsxRuntime.jsx("g", {
 	      id: "ManualVSIndicator",
-	      className: manMode ? 'show' : 'hide',
+	      className: !autoMode ? 'show' : 'hide',
 	      children: /*#__PURE__*/jsxRuntime.jsx(GaugeComponentMemo, {
 	        x: 440,
 	        y: 385,
 	        radius: 50,
 	        startAngle: 10,
 	        endAngle: -190,
-	        verticalSpeed: cabinVs * 60 / 1000,
+	        verticalSpeed: Math.abs(cabinVs / 50 * 50 / 1000) <= 2.25 ? cabinVs / 50 * 50 / 1000 : 2.250,
 	        className: "Gauge"
 	      })
 	    }), /*#__PURE__*/jsxRuntime.jsx("text", {
@@ -9429,7 +9429,7 @@
 	      children: "FT"
 	    }), /*#__PURE__*/jsxRuntime.jsxs("g", {
 	      id: "vsArrow",
-	      className: (cabinVs * 60 <= -50 || cabinVs * 60 >= 50) && !manMode ? '' : 'Hide',
+	      className: (cabinVs * 60 <= -50 || cabinVs * 60 >= 50) && autoMode ? '' : 'Hide',
 	      transform: cabinVs * 60 <= -50 ? 'translate(0, 795) scale(1, -1)' : 'scale(1, 1)',
 	      children: [/*#__PURE__*/jsxRuntime.jsx("path", {
 	        d: "M433,405 h7 L446,395",
