--- a/PackageSources/html_ui/Pages/VCockpit/Instruments/Airliners/SU95/CDU/SU95_CDU.html
+++ b/PackageSources/html_ui/Pages/VCockpit/Instruments/Airliners/SU95/CDU/SU95_CDU.html
@@ -39,6 +39,7 @@
 <script type="text/html" import-script="/Pages/VCockpit/Instruments/Airliners/SU95/A32NX_BaseAirliners.js"></script>
 <script type="text/html" import-script="/Pages/VCockpit/Instruments/Airliners/SU95/FMC/SU95_FMCMainDisplay.js"></script>
 <script type="text/html" import-script="/Pages/VCockpit/Instruments/Airliners/SU95/FMC/A32NX_FMCDataManager.js"></script>
+<script type="text/html" import-script="/Pages/VCockpit/Instruments/Airliners/SU95/CDU/A320_Neo_CDU_Scratchpad.js"></script>
 <script type="text/html" import-script="/Pages/VCockpit/Instruments/Airliners/SU95/CDU/A320_Neo_CDU_Field.js"></script>
 <script type="text/html" import-script="/Pages/VCockpit/Instruments/Airliners/SU95/CDU/A320_Neo_CDU_DataIndexPage.js"></script>
 <script type="text/html" import-script="/Pages/VCockpit/Instruments/Airliners/SU95/CDU/A320_Neo_CDU_PositionMonitorPage.js"></script>
